tests/ui/loops/loop-proper-liveness.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/loop-proper-liveness.rs:9:22
   |
LL |     let x: i32;
   |         - binding declared here but left uninitialized
...
LL |     println!("{:?}", x);
   |                      ^ `x` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider assigning a value
   |
LL |     let x: i32 = 42;
   |                ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
